{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 3,
  "lineage": "9b603d51-2fb3-6539-7896-11998f35f31d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07e369db09e809960",
            "arn": "arn:aws:ec2:us-east-1:170812534690:instance/i-0b181f3bc450ad9d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b181f3bc450ad9d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-037bc299d85e1a2d8",
            "private_dns": "ip-172-31-92-4.ec2.internal",
            "private_ip": "172.31.92.4",
            "public_dns": "ec2-18-212-199-186.compute-1.amazonaws.com",
            "public_ip": "18.212.199.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04020ce2b3790e51f",
                "volume_size": 28,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cabeacfe226e55c9",
            "tags": {
              "Name": "EC2 Demo 2"
            },
            "tags_all": {
              "Name": "EC2 Demo 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b1dcec6ae3bce5b",
              "sg-09c76be3d5a49fe25"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170812534690:security-group/sg-09b1dcec6ae3bce5b",
            "description": "Dev VPC SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b1dcec6ae3bce5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-ssh",
            "name_prefix": "",
            "owner_id": "170812534690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-ssh"
            },
            "tags_all": {
              "Name": "vpc-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cadb9f214deac6f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170812534690:security-group/sg-09c76be3d5a49fe25",
            "description": "Dev VPC Web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c76be3d5a49fe25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-web",
            "name_prefix": "",
            "owner_id": "170812534690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-web"
            },
            "tags_all": {
              "Name": "vpc-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cadb9f214deac6f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}